# foobot-vala

./: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac  foobot.conf.example
plugins/: Makefile.am  plugins.mk
plugins/bofh/: Makefile.am  bofh.plugin  bofh.vala
plugins/core/: Makefile.am  core.plugin  core.vala
plugins/demo/: Makefile.am  demo.plugin  demo.vala
plugins/eightball/: Makefile.am  eightball.plugin  eightball.vala
plugins/qalc/: Makefile.am  qalc.plugin  qalc.vala
plugins/quotes/: Makefile.am  quotes.plugin  quotes.vala
plugins/slogans/: Makefile.am  slogans.plugin  slogans.vala
plugins/snack/: Makefile.am  snack.plugin  snack.vala
plugins/tvguide/: Makefile.am  tvguide.plugin  tvguide.vala
src/: bot.vala  foodb.vala  irc.vala  main.vala  plugin-interface.vala  plugins.vala  settings.vala  user.vala
vapi/: config.vapi  foobot.deps
